# smm-ai

./: .gitignore  .pre-commit-config.yaml  README.md  hello.py  pyproject.toml  requirements.txt
assignments/: hw1.md  hw2.md  hw3.md  hw4.md
notebooks/: hw1.py
scripts/: build.py
